--- a/src/style/var.less
+++ b/src/style/var.less
@@ -42,7 +42,7 @@
 @font-size-sm: var(--font-size-sm);
 @font-size-md: var(--font-size-md);
 @font-size-lg: var(--font-size-lg);
-@font-weight-bold: var(font-weight-bold);
+@font-weight-bold: var(--font-weight-bold);
 @line-height-xs: var(--line-height-xs);
 @line-height-sm: var(--line-height-sm);
 @line-height-md: var(--line-height-md);
